--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,10 +33,22 @@ jobs:
           python -m pip install --upgrade pip
           pip install buildozer==1.5.0 Cython==0.29.36
 
-      - name: Build APK (debug)
-        working-directory: fitness_app
-        run: |
-          buildozer -v android debug
+     - name: Build APK (debug)
+  working-directory: fitness_app
+  run: |
+    # 初始化 android 环境（会下载 SDK/NDK）
+    buildozer -v android debug || true
+
+    # 自动接受 Android SDK licenses（非交互）
+    yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
+    yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/bin/sdkmanager --licenses || true
+
+    # 确保安装 build-tools（含 aidl）
+    ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;33.0.2" "platform-tools" "platforms;android-33" || true
+    ~/.buildozer/android/platform/android-sdk/cmdline-tools/bin/sdkmanager "build-tools;33.0.2" "platform-tools" "platforms;android-33" || true
+
+    # 再真正编译一次（这次应该能找到 aidl）
+    buildozer -v android debug
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
