--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,22 +33,36 @@ jobs:
           python -m pip install --upgrade pip
           pip install buildozer==1.5.0 Cython==0.29.36
 
-     - name: Build APK (debug)
-  working-directory: fitness_app
-  run: |
-    # 初始化 android 环境（会下载 SDK/NDK）
-    buildozer -v android debug || true
+      - name: Prepare Android SDK (download only)
+        working-directory: fitness_app
+        run: |
+          # 先触发 buildozer 下载/初始化 SDK/NDK（即使失败也继续）
+          buildozer android debug || true
 
-    # 自动接受 Android SDK licenses（非交互）
-    yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses || true
-    yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/bin/sdkmanager --licenses || true
+      - name: Accept Android SDK licenses + install build-tools
+        run: |
+          set -e
+          SDKROOT="$HOME/.buildozer/android/platform/android-sdk"
+          echo "SDKROOT=$SDKROOT"
 
-    # 确保安装 build-tools（含 aidl）
-    ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;33.0.2" "platform-tools" "platforms;android-33" || true
-    ~/.buildozer/android/platform/android-sdk/cmdline-tools/bin/sdkmanager "build-tools;33.0.2" "platform-tools" "platforms;android-33" || true
+          # 找到 sdkmanager（不同版本路径略有差异）
+          if [ -x "$SDKROOT/cmdline-tools/latest/bin/sdkmanager" ]; then
+            SDKMAN="$SDKROOT/cmdline-tools/latest/bin/sdkmanager"
+          else
+            SDKMAN="$SDKROOT/cmdline-tools/bin/sdkmanager"
+          fi
 
-    # 再真正编译一次（这次应该能找到 aidl）
-    buildozer -v android debug
+          echo "Using sdkmanager: $SDKMAN"
+
+          yes | "$SDKMAN" --licenses
+
+          # 安装常用平台 & build-tools（含 aidl）
+          "$SDKMAN" "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+
+      - name: Build APK (debug)
+        working-directory: fitness_app
+        run: |
+          buildozer -v android debug
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
