--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,15 +18,22 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install system deps
+      - name: Install system deps + set Java 17
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            git zip unzip openjdk-17-jdk \
-            autoconf libtool pkg-config \
-            zlib1g-dev libncurses5-dev libncursesw5-dev \
-            libtinfo5 cmake libffi-dev libssl-dev \
-            build-essential curl
+              git zip unzip openjdk-17-jdk \
+              autoconf libtool pkg-config \
+              zlib1g-dev libncurses5-dev libncursesw5-dev \
+              libtinfo5 cmake libffi-dev libssl-dev \
+              build-essential curl
+
+          # ✅ 强制切到 Java 17（解决 class file version 61 的报错）
+          sudo update-alternatives --set java /usr/lib/jvm/java-17-openjdk-amd64/bin/java
+          sudo update-alternatives --set javac /usr/lib/jvm/java-17-openjdk-amd64/bin/javac
+
+          java -version
+          javac -version
 
       - name: Install buildozer
         run: |
